# OutsideSensor

./: .clang-format  .gitignore  ADS1115.cpp  ADS1115.h  BMP280.cpp  BMP280.h  BSECglue.cpp  BSECglue.h  CMakeLists.txt  DB.cpp  DB.h  Display.cpp  Display.h  HDC2080.cpp  HDC2080.h  Makefile  PMS7003.cpp  PMS7003.h  README.md  SEN5x.c  SEN5x.cpp  SEN5x.h  SFA30x.c  SFA30x.cpp  SFA30x.h  SGP40.c  SGP40.cpp  SGP40.h  VEML7700.cpp  VEML7700.h  config.h  i2c_helper.cpp  i2c_helper.h  main.cpp  workspace.code-workspace
BME680/: BME68x.cpp  bme68x.c  bme68x.h  bme68x_adapter.h  bme68x_defs.h
BSEC/: bsec_datatypes.h  bsec_iaq.config  bsec_iaq.csv
OLED_Waveshare/examples/: OLED_0in91_test.c  OLED_0in95_rgb_test.c  OLED_1in3_c_test.c  OLED_1in3_test.c  OLED_1in5_rgb_test.c  OLED_1in5_test.c  main.c  test.h
OLED_Waveshare/lib/Config/: DEV_Config.h  dev_hardware_SPI.c
OLED_Waveshare/lib/OLED/: OLED_0in91.c  OLED_0in91.h  OLED_0in95_rgb.c  OLED_0in95_rgb.h  OLED_1in3.c  OLED_1in3.h  OLED_1in3_c.c  OLED_1in3_c.h  OLED_1in5.c  OLED_1in5.h  OLED_1in5_rgb.c  OLED_1in5_rgb.h
